# multi-agent-research-assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: config.py  llm.py
src/agents/: __init__.py  analyst.py  base.py  critic.py  planner.py  searcher.py  writer.py
src/api/: main.py  middleware.py  schemas.py
src/api/routes/: health.py  research.py
src/cli/: app.py
src/models/: __init__.py  domain.py
src/orchestrator/: callbacks.py  graph.py  state.py
src/rag/: chunker.py  embeddings.py  retriever.py  store.py
tests/: conftest.py
tests/integration/: test_api.py  test_graph.py
tests/unit/: test_analyst.py  test_critic.py  test_models.py  test_planner.py  test_rag.py  test_writer.py
