[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Multi-agent system that orchestrates specialized AI agents to research topics, synthesize findings, and produce structured reports."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Research Assistant Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "litellm>=1.50.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "redis>=5.0.0",
    "fakeredis>=2.25.0",
    "duckduckgo-search>=6.3.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "slowapi>=0.1.9",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-beautifulsoup4>=4.12.0",
    "types-markdown>=3.7.0",
    "httpx",
]

[project.scripts]
research = "src.cli.app:app"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default argument (needed for FastAPI Depends)
    "UP007",  # use X | Y for union types (keep Optional for clarity)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "chromadb.*",
    "sentence_transformers.*",
    "rank_bm25.*",
    "duckduckgo_search.*",
    "slowapi.*",
    "fakeredis.*",
    "tiktoken.*",
    "html2text.*",
    "langgraph.*",
    "langchain_core.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/cli/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
